--- a/openstack-helm-infra/roles/deploy-env/defaults/main.yaml
+++ b/openstack-helm-infra/roles/deploy-env/defaults/main.yaml
@@ -21,10 +21,10 @@ calico_setup: true
 calico_version: "v3.27.4"
 calico_manifest_url: "https://raw.githubusercontent.com/projectcalico/calico/{{ calico_version }}/manifests/calico.yaml"
 
-cilium_setup: false
+cilium_setup: true
 cilium_version: "1.16.0"
 
-flannel_setup: false
+flannel_setup: true
 flannel_version: v0.25.4
 
 kubectl:
@@ -49,7 +49,7 @@ loopback_image_size: 12G
 
 coredns_resolver_setup: true
 
-metallb_setup: false
+metallb_setup: true
 metallb_pool_cidr: "172.24.128.0/24"
 metallb_openstack_endpoint_cidr: "172.24.128.100/24"
 
@@ -57,7 +57,7 @@ client_cluster_ssh_setup: true
 client_ssh_user: zuul
 cluster_ssh_user: zuul
 
-openstack_provider_gateway_setup: false
+openstack_provider_gateway_setup: true
 openstack_provider_network_cidr: "172.24.4.0/24"
 openstack_provider_gateway_cidr: "172.24.4.1/24"
 
