--- a/openstack-helm-infra/roles/deploy-env/tasks/k8s_common.yaml
+++ b/openstack-helm-infra/roles/deploy-env/tasks/k8s_common.yaml
@@ -70,7 +70,11 @@
   apt:
     state: present
     update_cache: true
-    allow_downgrade: true
+# FAILED! => {"changed": false, "msg": "Unsupported parameters for (apt) module: allow_downgrade Supported parameters include: allow_unauthenticated,
+# autoclean, autoremove, cache_valid_time, deb, default_release, dpkg_options, force, force_apt_get, install_recommends, only_upgrade, package, policy_rc_d,
+# purge, state, update_cache, update_cache_retries, update_cache_retry_max_delay, upgrade"}
+#    allow_downgrade: true
+    install_recommends: true
     pkg:
       - "kubelet={{ kube_version }}"
       - "kubeadm={{ kube_version }}"
