--- a/openstack-helm-infra/roles/deploy-env/tasks/flannel.yaml
+++ b/openstack-helm-infra/roles/deploy-env/tasks/flannel.yaml
@@ -6,7 +6,7 @@
     - name: Add Flannel chart repo
       kubernetes.core.helm_repository:
         name: flannel
-        repo_url: "https://flannel-io.github.io/flannel/releases/latest/download/kube-flannel.yml"
+        repo_url: "https://flannel-io.github.io/flannel/"
 
     - name: Install Flannel
       kubernetes.core.helm:
