--- a/openstack-helm-infra/roles/deploy-env/tasks/main.yaml
+++ b/openstack-helm-infra/roles/deploy-env/tasks/main.yaml
@@ -27,12 +27,12 @@
 
 #- name: Deploy Containerd
 #  include_tasks:
-#    file: containerd.yaml
+#    file: containerd.yaml#
 
-- name: Include K8s common tasks
-  include_tasks:
-    file: k8s_common.yaml
-  when: inventory_hostname in (groups['k8s_cluster'] | default([]))
+#- name: Include K8s common tasks
+#  include_tasks:
+#    file: k8s_common.yaml
+#  when: inventory_hostname in (groups['k8s_cluster'] | default([]))
 
 - name: Include K8s control-plane tasks
   include_tasks:
@@ -43,10 +43,10 @@
   command: "{{ (groups['k8s_control_plane'] | map('extract', hostvars, ['join_command', 'stdout_lines', 0]))[0] }}"
   when: inventory_hostname in (groups['k8s_nodes'] | default([]))
 
-#- name: Include K8s client tasks
-#  include_tasks:
-#    file: k8s_client.yaml
-#  when: inventory_hostname in (groups['primary'] | default([]))
+- name: Include K8s client tasks
+  include_tasks:
+    file: k8s_client.yaml
+  when: inventory_hostname in (groups['primary'] | default([]))
 
 - name: Include Calico tasks
   include_tasks:
